--- a/app/views/schedules/_form.html.erb
+++ b/app/views/schedules/_form.html.erb
@@ -1,18 +1,5 @@
-  <%= render "shared/error_messages", :target => form.object %>
-  <%= form.inputs do %>
+  <%= render "shared/error_messages", target: form.object %>
   <%= form.input :name %>
-  <% end %>
-
-  <%= form.inputs for: :periods, name: 'Periods' do |subform| %>
-    <%= render partial: 'periods/period_fields', locals: { f: subform } %>
-  <% end %>
-
-  <div class='links'>
-    <p>
-      <%= link_to_add_association 'add period', form, :periods,
-        partial: 'periods/period_fields' %>
-    </p>
-  </div>
-
-  <%= form.actions %>
+  <%= form.input :periods, as: :cocoon %>
+  <%= form.button :wrapped, cancel: schedules_path %>
 
