--- a/app/views/brands/_form.html.erb
+++ b/app/views/brands/_form.html.erb
@@ -1,25 +1,23 @@
   <%= render "shared/error_messages", target: form.object %>
-  <%= form.inputs do %>
-    <%= form.input :name %>
-    <%= form.input :logo, as: :file %>
-    <%= form.input :phone,
-      hint: "#{will_override_default_contact :phone}" %>
-    <%= form.input :fax,
-      hint: "#{will_override_default_contact :fax}" %>
-    <%= form.input :email,
-      hint: "#{will_override_default_contact :email}" %>
-    <%= form.input :web,
-      hint: "#{will_override_default_contact :web}" %>
-    <%= form.input :address_1, label: "Address Line 1",
-      hint: "#{will_override_default_contact :address_1}" %>
-    <%= form.input :address_2, label: "Address Line 2",
-      hint: "#{will_override_default_contact :address_2}" %>
-    <%= form.input :city,
-      hint: "#{will_override_default_contact :city}" %>
-    <%= form.input :state,
-      hint: "#{will_override_default_contact :state}" %>
-    <%= form.input :zip,
-      hint: "#{will_override_default_contact :zip}" %>
-  <% end %>
-  <%= form.actions %>
+  <%= form.input :name %>
+  <%= form.input :logo, as: :file %>
+  <%= form.input :phone,
+    hint: "#{will_override_default_contact :phone}" %>
+  <%= form.input :fax,
+    hint: "#{will_override_default_contact :fax}" %>
+  <%= form.input :email,
+    hint: "#{will_override_default_contact :email}" %>
+  <%= form.input :web,
+    hint: "#{will_override_default_contact :web}" %>
+  <%= form.input :address_1, label: "Address Line 1",
+    hint: "#{will_override_default_contact :address_1}" %>
+  <%= form.input :address_2, label: "Address Line 2",
+    hint: "#{will_override_default_contact :address_2}" %>
+  <%= form.input :city,
+    hint: "#{will_override_default_contact :city}" %>
+  <%= form.input :state,
+    hint: "#{will_override_default_contact :state}" %>
+  <%= form.input :zip,
+    hint: "#{will_override_default_contact :zip}" %>
+  <%= form.button :wrapped, cancel: brands_path %>
 
