--- a/app/views/brands/edit.html.erb
+++ b/app/views/brands/edit.html.erb
@@ -1,6 +1,6 @@
 <h2>Editing brand</h2>
 
-<%= semantic_form_for(@brand, :html => { :multipart => true } ) do |f| %>
+<%= simple_form_for(@brand, :html => { :multipart => true } ) do |f| %>
   <%= render :partial => 'form', :object => f %>
 <% end %>
 
