--- a/app/views/meeting_templates/new.html.erb
+++ b/app/views/meeting_templates/new.html.erb
@@ -1,6 +1,6 @@
 <h2>New meeting template</h2>
 
-<%= semantic_form_for(@meeting_template) do |f| %>
+<%= simple_form_for(@meeting_template) do |f| %>
   <%= render partial: 'form', object: f %>
 <% end %>
 
