--- a/app/views/meetings/new.html.erb
+++ b/app/views/meetings/new.html.erb
@@ -1,6 +1,6 @@
 <h2>New meeting for <%=h @meeting.committee %></h2>
 
-<%= semantic_form_for( @meeting, :url => committee_meetings_path(@meeting.committee),
+<%= simple_form_for( @meeting, :url => committee_meetings_path(@meeting.committee),
   :html => { :multipart => true } ) do |f| %>
   <%= render :partial => 'form', :object => f %>
 <% end %>
