--- a/app/views/meetings/publish.html.erb
+++ b/app/views/meetings/publish.html.erb
@@ -2,7 +2,7 @@
 
 <p>Use this page to generate an email notice on your behalf to a recipient with the agenda and attachments for the meeting.</p>
 
-<%= semantic_form_for @meeting, url: publish_meeting_path(@meeting), method: :put do |form| %>
+<%= simple_form_for @meeting, url: publish_meeting_path(@meeting), method: :put do |form| %>
   <%= form.inputs do %>
   <%= form.input :publish_to, label: 'To', hint: 'To what address will this be published?' %>
   <% end %>
