--- a/app/views/motions/adopt.html.erb
+++ b/app/views/motions/adopt.html.erb
@@ -2,15 +2,10 @@
   Use this form to record the adoption of the motion by the committee.
 <% end %>
 
-<%= semantic_form_for @motion, as: :motion,
+<%= simple_form_for @motion, as: :motion,
   url: adopt_motion_path( @motion ), method: :put do |form| %>
   <%= render "shared/error_messages", target: form.object %>
-  <%= form.inputs do %>
   <%= render partial: 'motions/event_fields', object: form %>
-  <% end %>
-
-  <%= form.actions do %>
-    <%= form.action :submit, label: 'Adopt' %>
-  <% end %>
+  <%= form.button :wrapped, label: 'Adopt', cancel: motion_path( form.object ) %>
 <% end %>
 
