--- a/app/views/motions/amend.html.erb
+++ b/app/views/motions/amend.html.erb
@@ -6,7 +6,7 @@ Specify attachments only if they are to be substituted for or added to the origi
 An amendment must have sponsors.
 </p>
 
-<%= semantic_form_for @amendment, as: :amendment,
+<%= simple_form_for @amendment, as: :amendment,
   url: amend_motion_path( @motion ), method: :put do |form| %>
   <%= render "shared/error_messages", target: form.object %>
   <%= render partial: 'motions/event_fields', object: form %>
@@ -14,31 +14,8 @@ An amendment must have sponsors.
     hint: 'What should be the new name of the amendment? (Usually best to use the default)' %>
   <%= form.input :description, hint: 'Briefly describe amended purpose and effect of motion' %>
   <%= form.input :content, hint: 'Provide the amended text of the motion' %>
-
-  <%= form.inputs for: :sponsorships, name: 'sponsor' do |subform| %>
-    <%= render partial: 'sponsorships/sponsorship_fields', locals: { f: subform } %>
-  <% end %>
-
-  <div class='links'>
-    <p>
-      <%= link_to_add_association 'add sponsorship', form, :sponsorships,
-        partial: 'sponsorships/sponsorship_fields' %>
-    </p>
-  </div>
-
-  <%= form.inputs for: :attachments, name: 'attachment' do |subform| %>
-    <%= render partial: 'attachments/attachment_fields', locals: { f: subform } %>
-  <% end %>
-
-  <div class='links'>
-    <p>
-      <%= link_to_add_association 'add attachment', form, :attachments,
-        partial: 'attachments/attachment_fields' %>
-    </p>
-  </div>
-
-  <%= form.actions do %>
-    <%= form.action :submit, label: 'Amend' %>
-  <% end %>
+  <%= form.input :sponsorships, as: :cocoon %>
+  <%= form.input :attachments, as: :cocoon %>
+  <%= form.button :wrapped, label: 'Amend', cancel: motion_path( @motion ) %>
 <% end %>
 
