--- a/app/views/motions/divide.html.erb
+++ b/app/views/motions/divide.html.erb
@@ -3,34 +3,14 @@
   These motions will be considered in the same committee in which this motion is proposed.
 <% end %>
 
-<%= content_tag :h3, 'Motion to be divided' %>
-
 <%= render partial: 'motions/detail', locals: { motion: @motion } %>
 
-<%= content_tag :h3, 'Dividing motions' %>
-
 <%= content_tag( :div, id: "referred_motions" ) do %>
-  <%= semantic_form_for( @motion, url: divide_motion_path( @motion ),
+  <%= simple_form_for( @motion, url: divide_motion_path( @motion ),
     method: :put ) do |form| %>
-      <%= form.inputs do %>
-        <%= render partial: 'motions/event_fields', object: form %>
-      <% end %>
-      <%= form.inputs for: :referred_motions, name: 'dividing motion' do |subform| %>
-        <%=render "shared/error_messages", target: subform.object %>
-        <%=render partial: 'motions/referred_motion_fields',
-          locals: { role: :divider, committee: @motion.committee, f: subform } %>
-      <% end %>
-
-      <%= content_tag( :div, class: 'links' ) do %>
-        <%= content_tag :p do %>
-          <%= link_to_add_association 'add dividing motion', form, :referred_motions,
-            render_options: { locals: { role: :divider, committee: @motion.committee } } %>
-        <% end %>
-      <% end %> <!-- .links -->
-
-    <%= form.actions do %>
-      <%= form.action :submit, label: 'Divide' %>
-    <% end %>
+    <%= render partial: 'motions/event_fields', object: form %>
+    <%= form.input :referred_motions, as: :cocoon, label: "Dividing Motions" %>
+    <%= form.button :wrapped, label: 'Divide', cancel: motion_path(form.object) %>
   <% end %>
-<% end %> <!-- #referred_motions -->
+<% end %>
 
