--- a/app/views/motions/implement.html.erb
+++ b/app/views/motions/implement.html.erb
@@ -3,16 +3,10 @@
   Implementation indicates no further followup is expected regarding the motion.
 <% end %>
 
-<%= semantic_form_for @motion, as: :motion,
+<%= simple_form_for @motion, as: :motion,
   url: implement_motion_path( @motion ), method: :put do |form| %>
   <%= render "shared/error_messages", target: form.object %>
-
-  <%= form.inputs do %>
   <%= render partial: 'motions/event_fields', object: form %>
-  <% end %>
-
-  <%= form.actions do %>
-    <%= form.action :submit, label: 'Implement' %>
-  <% end %>
+  <%= form.button :wrapped, label: 'Implement', cancel: motion_path(form.object) %>
 <% end %>
 
