--- a/app/views/motions/propose.html.erb
+++ b/app/views/motions/propose.html.erb
@@ -4,15 +4,11 @@
   The leadership of the committee will then be able to schedule it for meetings.
 <% end %>
 
-<%= semantic_form_for @motion, as: :motion,
+<%= simple_form_for @motion, as: :motion,
   url: propose_motion_path( @motion ), method: :put do |form| %>
   <%= render "shared/error_messages", target: form.object %>
-  <%= form.inputs do %>
   <%= render partial: 'motions/event_fields', object: form %>
-  <% end %>
 
-  <%= form.actions do %>
-    <%= form.action :submit, label: 'Propose' %>
-  <% end %>
+  <%= form.button :wrapped, label: 'Propose', cancel: motion_path(form.object) %>
 <% end %>
 
