--- a/app/views/motions/refer.html.erb
+++ b/app/views/motions/refer.html.erb
@@ -4,21 +4,17 @@
   then work through that committee's normal business process.
 <% end %>
 
-<%= semantic_form_for @referred_motion, as: :referred_motion,
+<%= simple_form_for @referred_motion, as: :referred_motion,
   url: refer_motion_path( @motion ), method: :put do |form| %>
   <%= render "shared/error_messages", target: form.object %>
 
   <%= render partial: 'motions/event_fields', object: form %>
 
-  <%= form.inputs do %>
-    <%= form.input :committee_name, label: 'Committee',
-      hint: 'To which committee should this motion be referred?' %>
-    <%= form.input :name, label: 'Name',
-      hint: 'What should be the new name of the motion?' %>
-  <% end %>
+  <%= form.input :committee_name, label: 'Committee',
+    hint: 'To which committee should this motion be referred?' %>
+  <%= form.input :name, label: 'Name',
+    hint: 'What should be the new name of the motion?' %>
 
-  <%= form.actions do %>
-    <%= form.action :submit, label: 'Refer' %>
-  <% end %>
+  <%= form.button :wrapped, label: 'Refer', cancel: motion_path(@motion) %>
 <% end %>
 
