--- a/app/views/motions/reject.html.erb
+++ b/app/views/motions/reject.html.erb
@@ -2,15 +2,10 @@
   Use this form to record the rejection of the motion by the committee.
 <% end %>
 
-<%= semantic_form_for @motion, as: :motion,
+<%= simple_form_for @motion, as: :motion,
   url: reject_motion_path( @motion ), method: :put do |form| %>
   <%= render "shared/error_messages", target: form.object %>
-  <%= form.inputs do %>
   <%= render partial: 'motions/event_fields', object: form %>
-  <% end %>
-
-  <%= form.actions do %>
-    <%= form.action :submit, label: 'Reject' %>
-  <% end %>
+  <%= form.button :wrapped, label: 'Reject', cancel: motion_path(@motion) %>
 <% end %>
 
