--- a/app/views/motions/withdraw.html.erb
+++ b/app/views/motions/withdraw.html.erb
@@ -3,15 +3,11 @@
   The motion will be yanked from any future meetings for which it is scheduled.
 <% end %>
 
-<%= semantic_form_for @motion, as: :motion,
+<%= simple_form_for @motion, as: :motion,
   url: withdraw_motion_path( @motion ), method: :put do |form| %>
   <%= render "shared/error_messages", target: form.object %>
-  <%= form.inputs do %>
   <%= render partial: 'motions/event_fields', object: form %>
-  <% end %>
 
-  <%= form.actions do %>
-    <%= form.action :submit, label: 'Withdraw' %>
-  <% end %>
+  <%= form.button :wrapped, label: 'Withdraw', cancel: motion_path(form.object) %>
 <% end %>
 
