--- a/app/views/positions/_form.html.erb
+++ b/app/views/positions/_form.html.erb
@@ -1,5 +1,4 @@
   <%= render "shared/error_messages", :target => form.object %>
-  <%= form.inputs do %>
   <%= form.input :name %>
   <%= form.input :authority %>
   <%= form.input :quiz %>
@@ -21,20 +20,6 @@
   <%= form.input :join_message %>
   <%= form.input :leave_message %>
   <%= form.input :reject_message %>
-  <% end %>
-
-  <%= form.inputs for: :enrollments, name: 'enrollment' do |subform| %>
-    <%= render partial: 'enrollments/enrollment_fields', locals: { f: subform,
-      position: form.object } %>
-  <% end %>
-
-  <div class='links'>
-    <p>
-      <%= link_to_add_association 'add enrollment', form, :enrollments,
-        partial: 'enrollments/enrollment_fields',
-        render_options: { locals: { position: form.object } } %>
-    </p>
-  </div>
-
-  <%= form.actions %>
+  <%= form.input :enrollments, as: :cocoon %>
+  <%= form.button :wrapped, cancel: positions_path %>
 
