--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,5 +1,4 @@
   <%= render "shared/error_messages", target: form.object %>
-  <%= form.inputs do %>
   <%= form.input :name %>
   <%= form.input :disposition, as: :select, collection: Question::DISPOSITIONS,
     hint: 'How should the question be presented to the user?' %>
@@ -7,6 +6,5 @@
     hint: 'What is the text of the question?' %>
   <%= form.input :global, as: :radio, label: 'Global?',
     hint: "Should the answer default to what has been given to the same question in other membership_requests?" %>
-  <% end %>
-  <%= form.actions %>
+  <%= form.button :wrapped, cancel: questions_path %>
 
