--- a/app/views/committees/new.html.erb
+++ b/app/views/committees/new.html.erb
@@ -1,10 +1,6 @@
-<h2>New committee</h2>
+<h1>New committee</h1>
 
-<%= simple_form_for(@committee) do |f| %>
-  <%= render :partial => 'form', :object => f %>
+<%= simple_form_for(committee) do |f| %>
+  <%= render partial: 'form', object: f %>
 <% end %>
-
-<p>
-<%= link_to 'Back', committees_path %>
-</p>
 
