--- a/app/views/committees/show.html.erb
+++ b/app/views/committees/show.html.erb
@@ -1,99 +1,96 @@
-<div id="committee-<%= @committee.id %>">
+<div id="committee-<%= committee.id %>">
 <p>
-  <b>Name:</b> <%=h @committee.name %>
+  <b>Name:</b> <%=h committee.name %>
 </p>
 
 <p>
-  <b>Contact name:</b> <%= @committee.contact_name %>
+  <b>Contact name:</b> <%= committee.contact_name %>
 </p>
 
 <p>
-  <b>Contact email:</b> <%= @committee.contact_email %>
+  <b>Contact email:</b> <%= committee.contact_email %>
 </p>
 
 <p>
-  <b>Active?</b> <%= @committee.active? ? 'Yes' : 'No' %>
+  <b>Active?</b> <%= committee.active? ? 'Yes' : 'No' %>
 </p>
 
 <p>
-  <b>Schedule:</b> <%=h @committee.schedule %>
+  <b>Schedule:</b> <%=h committee.schedule %>
 </p>
 
 <p>
-  <b>Meeting template:</b> <%=h @committee.meeting_template %>
+  <b>Meeting template:</b> <%=h committee.meeting_template %>
 </p>
 
 <p>
-  <b>Brand:</b> <%= @committee.brand ? link_to(@committee.brand.name, brand_path( @committee.brand )) : 'No' %>
+  <b>Brand:</b> <%= committee.brand ? link_to(committee.brand.name, brand_path( committee.brand )) : 'No' %>
 </p>
 
 <p>
-  <b>Publish email:</b> <%= @committee.publish_email %>
+  <b>Publish email:</b> <%= committee.publish_email %>
 </p>
 
 <p><b>Join message:</b></p>
 
-<%=markdown @committee.join_message %>
+<%=markdown committee.join_message %>
 
 <p><b>Leave message:</b></p>
 
-<%=markdown @committee.leave_message %>
+<%=markdown committee.leave_message %>
 
 <p><b>Reject message:</b></p>
 
-<%=markdown @committee.reject_message %>
+<%=markdown committee.reject_message %>
 
-<h3>Enrollments</h3>
+<h2>Enrollments</h2>
 
-<%= render partial: 'enrollments/enrollments', object: @committee.enrollments,
-  locals: { committee: @committee } %>
+<%= render partial: 'enrollments/enrollments', object: committee.enrollments,
+  locals: { committee: committee } %>
 
 </div>
 
 
-<%=form_tag tents_committee_path(@committee, :format => :pdf), :method => :get do %>
+<%=form_tag tents_committee_path(committee, format: :pdf), method: :get do %>
 <p>
   <b><%=label_tag :as_of, 'As of' %></b>
-  <%=text_field_tag :as_of,
-    ( params[:as_of].blank? ? Time.zone.now.strftime( '%Y-%m-%d') : params[:as_of] ),
-    class: 'ui-date-picker' %>
+  <%=text_field_tag :as_of, as_of.to_s( :us_short ), class: 'ui-date-picker' %>
+  <%=hidden_field_tag :as_of, class: 'as_of-alt' %>
   <%=submit_tag "Download Tent Cards" %>
 </p>
 <% end %>
 
-<%=form_tag members_committee_path(@committee, :format => :pdf), :method => :get do %>
+<%=form_tag members_committee_path(committee, format: :pdf), method: :get do %>
 <p>
   <b><%=label_tag :as_of, 'As of' %></b>
-  <%=text_field_tag :as_of,
-    ( params[:as_of].blank? ? Time.zone.now.strftime( '%Y-%m-%d' ) : params[:as_of] ),
-    class: 'ui-date-picker' %>
+  <%=text_field_tag :as_of, as_of.to_s( :us_short ), class: 'ui-date-picker' %>
+  <%=hidden_field_tag :as_of, class: 'as_of-alt' %>
   <%=submit_tag "Download Membership Directory" %>
 </p>
 <% end %>
 
 <% if permitted_to? :manage, :users %>
-  <%=form_tag empl_ids_committee_path(@committee, :format => :pdf), :method => :get do %>
+  <%=form_tag empl_ids_committee_path(committee, format: :pdf), method: :get do %>
   <p>
     <b><%=label_tag :as_of, 'As of' %></b>
-    <%=text_field_tag :as_of,
-      ( params[:as_of].blank? ? Time.zone.now.strftime( '%Y-%m-%d' ) : params[:as_of] ),
-      class: 'ui-date-picker' %>
+    <%=text_field_tag :as_of, as_of.to_s( :us_short ), class: 'ui-date-picker' %>
+    <%=hidden_field_tag :as_of, class: 'as_of-alt' %>
     <%=submit_tag "Download Empl Id Directory" %>
   </p>
   <% end %>
 <% end %>
 
 <p>
-<% if permitted_to? :edit, @committee -%>
-<%= link_to 'Edit', edit_committee_path(@committee) %> |
+<% if permitted_to? :edit, committee -%>
+<%= link_to 'Edit', edit_committee_path(committee) %> |
 <% end -%>
-<%= nested_index @committee, 'memberships', %w( past current future ) %> |
-<%= nested_index @committee, 'meetings', %w( past current future ) %> |
-<%= nested_index @committee, 'motions', %w( past current ) %> |
-<%= link_to 'List Positions', committee_positions_path(@committee) %> |
-<%= nested_index @committee, 'membership_requests', %w( active inactive ) %> |
-<%= link_to 'Tent cards (pdf)', tents_committee_path( @committee, :format => :pdf ) %> |
-<%= link_to 'Members (pdf)', members_committee_path( @committee, :format => :pdf ) %> |
+<%= nested_index committee, 'memberships', %w( past current future ) %> |
+<%= nested_index committee, 'meetings', %w( past current future ) %> |
+<%= nested_index committee, 'motions', %w( past current ) %> |
+<%= link_to 'List Positions', committee_positions_path(committee) %> |
+<%= nested_index committee, 'membership_requests', %w( active inactive ) %> |
+<%= link_to 'Tent cards (pdf)', tents_committee_path( committee, :format => :pdf ) %> |
+<%= link_to 'Members (pdf)', members_committee_path( committee, :format => :pdf ) %> |
 <%= link_to 'Back', committees_path %>
 </p>
 
