--- a/app/views/meetings/_meetings.html.erb
+++ b/app/views/meetings/_meetings.html.erb
@@ -12,8 +12,8 @@
   </tr>
   </thead>
   <tbody>
-<%= render :partial => "meeting", :collection => meetings,
-  :locals => { :committee => committee } %>
+<%= render partial: "meeting", collection: meetings,
+  locals: { committee: committee } %>
   </tbody>
 </table>
 
