--- a/app/views/meetings/publish.html.erb
+++ b/app/views/meetings/publish.html.erb
@@ -1,8 +1,8 @@
-<h2>Publish <%= @meeting %></h2>
+<h1>Publish <%= meeting %></h1>
 
 <p>Use this page to generate an email notice on your behalf to a recipient with the agenda and attachments for the meeting.</p>
 
-<%= simple_form_for @meeting, url: publish_meeting_path(@meeting), method: :put do |form| %>
+<%= simple_form_for meeting, url: publish_meeting_path(meeting), method: :put do |form| %>
   <%= form.inputs do %>
   <%= form.input :publish_to, label: 'To', hint: 'To what address will this be published?' %>
   <% end %>
