--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -1,11 +1,11 @@
-<h2><%= params[:action].titleize %> meetings for <%= @committee ? @committee : "" %></h2>
+<h1><%= params[:action].titleize %> meetings for <%= committee ? committee : "" %></h1>
 
-<%= form_for @q, url: request.fullpath, method: :get do |form| %>
-  <% if @committee %>
+<%= form_for q, url: request.fullpath, method: :get do |form| %>
+  <% if committee %>
   <p>
     <%= form.label :period_id_eq, 'Period' %>
     <%= form.select :period_id_eq,
-      @committee.schedule.periods.map { |p| [ p.to_s, p.id ] } %>
+      committee.schedule.periods.map { |p| [ p.to_s, p.id ] } %>
   </p>
   <% end %>
   <p>
@@ -22,23 +22,23 @@
 <% end %>
 
 <p>
-<%= paginate @meetings %>
+<%= paginate meetings %>
 </p>
 
-<%= render partial: "meetings/meetings", object: @meetings,
-  locals: { committee: ( @committee ? @committee : false ),
-            position: ( @user ? true : false ) } %>
+<%= render partial: "meetings/meetings", object: meetings,
+  locals: { committee: ( committee ? committee : false ),
+            position: ( user ? true : false ) } %>
 
 <p>
-<%= paginate @meetings %>
+<%= paginate meetings %>
 </p>
 
 <hr />
 
 <p>
-<% if @committee && permitted_to?( :create, @committee.meetings.
-  build( period_id: @committee.periods.active ? @committee.periods.active.id : nil ) ) %>
-<%= link_to 'New meeting', new_committee_meeting_path( @committee ) %>
+<% if committee && permitted_to?( :create, committee.meetings.
+  build( period_id: committee.periods.active ? committee.periods.active.id : nil ) ) %>
+<%= link_to 'New meeting', new_committee_meeting_path( committee ) %>
 <% end %>
 </p>
 
