--- a/app/views/meetings/new.html.erb
+++ b/app/views/meetings/new.html.erb
@@ -1,11 +1,11 @@
-<h2>New meeting for <%=h @meeting.committee %></h2>
+<h1>New meeting for <%=h meeting.committee %></h1>
 
-<%= simple_form_for( @meeting, :url => committee_meetings_path(@meeting.committee),
+<%= simple_form_for( meeting, :url => committee_meetings_path(meeting.committee),
   :html => { :multipart => true } ) do |f| %>
   <%= render :partial => 'form', :object => f %>
 <% end %>
 
 <p>
-<%= link_to 'Back', committee_meetings_path(@meeting.committee) %>
+<%= link_to 'Back', committee_meetings_path(meeting.committee) %>
 </p>
 
