Membership requests updated for exposures and simple_form+bootstrap.

--- a/app/views/membership_requests/new.html.erb
+++ b/app/views/membership_requests/new.html.erb
@@ -1,12 +1,8 @@
-<h2>New membership_request of <%=h @membership_request.user.name %> for <%=h @membership_request.committee %></h2>
+<h1>New membership request of <%=h membership_request.user.name %> for <%=h membership_request.committee %></h1>
 
-<%= simple_form_for( @membership_request,
-  url: polymorphic_path([ @membership_request.committee, :membership_requests ]),
+<%= simple_form_for( membership_request,
+  url: polymorphic_path([ membership_request.committee, :membership_requests ]),
   html: { multipart: true } ) do |f| %>
-  <%= render :partial => 'form', :object => f %>
+  <%= render partial: 'form', object: f %>
 <% end %>
-
-<p>
-<%= link_to 'Back', polymorphic_path( [@membership_request.committee, :membership_requests] ) %>
-</p>
 
