--- a/app/views/membership_requests/edit.html.erb
+++ b/app/views/membership_requests/edit.html.erb
@@ -1,11 +1,6 @@
-<h2>Editing membership_request of <%=h @membership_request.user.name %> for <%=h @membership_request.committee %></h2>
+<h1>Editing membership_request of <%=h membership_request.user.name %> for <%=h membership_request.committee %></h1>
 
-<%= simple_form_for(@membership_request, html: { multipart: true }) do |f| %>
+<%= simple_form_for(membership_request, html: { multipart: true }) do |f| %>
   <%= render partial: 'form', object: f %>
 <% end %>
-
-<p>
-<%= link_to 'Show', @membership_request %> |
-<%= link_to 'Back', polymorphic_path( [@membership_request.committee, :membership_requests] ) %>
-</p>
 
