--- a/app/views/membership_requests/index.html.erb
+++ b/app/views/membership_requests/index.html.erb
@@ -1,13 +1,13 @@
-<h2><%= params[:action].titleize %> membership_requests <%= @title %></h2>
+<h1><%= params[:action].titleize %> membership requests <%= @title %></h1>
 
-<%= form_for @q, url: request.fullpath, method: :get do |form| %>
-  <% unless @user %>
+<%= form_for q, url: request.fullpath, method: :get do |form| %>
+  <% unless user %>
   <p>
     <%= form.label :user_name_cont,'User' %>
     <%= form.text_field :user_name_cont %>
   </p>
   <% end %>
-  <% unless @committee %>
+  <% unless committee %>
   <p>
     <%= form.label :committee_name_cont, 'Committee' %>
     <%= form.text_field :committee_name_cont %>
@@ -26,20 +26,10 @@
   </p>
 <% end %>
 
-<p>
-<%= paginate @membership_requests %>
-</p>
+<%= paginate membership_requests %>
 
-<%= render partial: "membership_requests/membership_requests", object: @membership_requests,
-  locals: { committee: @committee, user: (@committee || @authority ? false : @user) } %>
+<%= render partial: "membership_requests/membership_requests", object: membership_requests.page(params[:page]),
+  locals: { committee: committee, user: user } %>
 
-<p>
-<%= paginate @membership_requests %>
-</p>
-
-<hr />
-
-<% if @authority %>
-<p><%= link_to @authority.to_s, @authority %></p>
-<% end %>
+<%= paginate membership_requests %>
 
