--- a/app/views/membership_requests/reject.html.erb
+++ b/app/views/membership_requests/reject.html.erb
@@ -1,11 +1,11 @@
-<h2>Reject <%=h @membership_request.user.name %> for <%=h @membership_request.committee %></h2>
+<h1>Reject <%=h membership_request.user.name %> for <%=h membership_request.committee %></h1>
 
-<%= simple_form_for(@membership_request, url: reject_membership_request_path(@membership_request),
+<%= simple_form_for(membership_request, url: reject_membership_request_path(membership_request),
   html: { method: :put } ) do |form| %>
   <%= form.inputs do %>
     <%= form.input :rejected_by_authority, as: :select, label: 'Authority',
       hint: 'Under which authority should rejection be made?',
-      collection: ( current_user.authorities.authorized.to_a & @membership_request.authorities ),
+      collection: ( current_user.authorities.authorized.to_a & membership_request.authorities ),
       html_options: { include_blank: false } %>
     <%= form.input :rejection_comment, as: :text, label: 'Comment',
       hint: 'Provide a brief explanation to the applicant for rejecting the request.' %>
@@ -14,9 +14,4 @@
     <%= form.action :submit, label: 'Reject' %>
   <% end %>
 <% end %>
-
-<p>
-<%= link_to 'Show', @membership_request %> |
-<%= link_to 'Back', polymorphic_path( [@membership_request.committee, :membership_requests] ) %>
-</p>
 
