Basic groundwork to move to simple_form+bootstrap and exposures.

--- a/app/views/memberships/_candidates.html.erb
+++ b/app/views/memberships/_candidates.html.erb
@@ -1,6 +1,6 @@
 <% if candidates.length > 0 %>
 <ul>
-<%= render :partial => 'candidate', :collection => candidates %>
+<%= render partial: 'candidate', collection: candidates %>
 </ul>
 <% else %>
 <p>No candidates</p>
