--- a/app/views/memberships/decline.html.erb
+++ b/app/views/memberships/decline.html.erb
@@ -1,4 +1,4 @@
-<h2>Decline</h2>
+<h1>Decline renewal of membership</h1>
 
 <p>
 Use this form to decline renewal of the membership described below.
