--- a/app/views/memberships/new.html.erb
+++ b/app/views/memberships/new.html.erb
@@ -1,11 +1,7 @@
-<h2>New membership for <%=h @membership.position %></h2>
+<h1>New membership for <%=h membership.position %></h1>
 
-<%= simple_form_for(@membership, :as => :membership,
-  :url => polymorphic_path( [ @membership.context, :memberships ] ) ) do |f| %>
-  <%= render :partial => 'form', :object => f %>
+<%= simple_form_for(membership, as: :membership,
+  url: polymorphic_path( [ membership.context, :memberships ] ) ) do |f| %>
+  <%= render partial: 'form', object: f %>
 <% end %>
-
-<p>
-<%= link_to 'Back', position_memberships_path(@membership.position) %>
-</p>
 
