--- a/app/views/memberships/_form.html.erb
+++ b/app/views/memberships/_form.html.erb
@@ -1,11 +1,16 @@
 <%= render "shared/error_messages", target: form.object %>
 <%= form.input :user_name, as: :autocomplete, label: 'User', url: users_path( format: :json ) %>
-<%= form.input :period, collection: form.object.position.schedule.periods %>
+<% if form.object.new_record? %>
+<%= form.association :period, collection: form.object.position.schedule.periods %>
+<% else %>
+<%= form.association :period, collection: form.object.position.schedule.periods, disabled: true,
+  hint: "You may not change the period of an existing membership." %>
+<% end %>
 <%= form.input :starts_at, as: :date_picker %>
 <%= form.input :ends_at, as: :date_picker %>
 <% form.object.designees.each do |designee| %>
-  <%= form.semantic_fields_for :designees, designee do |designee_form| %>
-    <%= designee_form.inputs do %>
+  <%= form.simple_fields_for :designees, designee do |designee_form| %>
+    <%= field_set_tag do %>
       <%= designee_form.input :committee_id, as: :hidden %>
       <%= designee_form.input :user_name, as: :autocomplete,
         label: "Designee for #{designee_form.object.committee.name}",
