--- a/app/views/memberships/edit.html.erb
+++ b/app/views/memberships/edit.html.erb
@@ -1,29 +1,24 @@
-<h2>Editing membership for <%=h @membership.position %></h2>
+<h2>Editing membership for <%=h membership.position %></h2>
 
-<%= simple_form_for(@membership) do |f| %>
+<%= simple_form_for(membership) do |f| %>
   <%= render partial: 'form', object: f %>
 <% end %>
 
 <div id="renewal_candidates">
 <h3>Renewal candidates</h3>
 
-<%= render partial: 'candidates', object: @membership.renewed_memberships.candidates.renewal_undeclined %>
+<%= render partial: 'candidates', object: membership.renewed_memberships.candidates.renewal_undeclined %>
 </div>
 
 <div id="new_candidates">
 <h3>Other applicants</h3>
 
-<%= render partial: 'candidates', object: @membership.membership_requests.interested %>
+<%= render partial: 'candidates', object: membership.membership_requests.interested %>
 </div>
 
 <div id="declined_renewal_candidates">
 <h3>Declined renewal candidates</h3>
 
-<%= render partial: 'candidates', object: @membership.renewed_memberships.candidates.renewal_declined %>
+<%= render partial: 'candidates', object: membership.renewed_memberships.candidates.renewal_declined %>
 </div>
-
-<p>
-<%= link_to 'Show', @membership %> |
-<%= link_to 'Back', position_memberships_path(@membership.position) %>
-</p>
 
