--- a/app/views/motions/merge.html.erb
+++ b/app/views/motions/merge.html.erb
@@ -1,15 +1,17 @@
-<p>
+<%=content_tag :h1, "Merge #{motion.to_s :full}" %>
+
+<%= content_tag :p do %>
 Use this form to merge the motion to another motion proposed before the same committee.
-</p>
+<% end %>
 
-<h3>Motion to be merged</h3>
+<%=content_tag :h2, "Motion to be merged" %>
 
-<%= render partial: 'motions/detail', locals: { motion: @motion_merger.merged_motion } %>
+<%= render partial: 'motions/detail', locals: { motion: motion_merger.merged_motion } %>
 
-<h3>Motion to which it will be merged</h3>
+<%=content_tag :h2, "Motion to which it will be merged" %>
 
-<%= simple_form_for @motion_merger, as: :motion_merger,
-  url: merge_motion_path( @motion_merger.merged_motion ),
+<%= simple_form_for motion_merger, as: :motion_merger,
+  url: merge_motion_path( motion_merger.merged_motion ),
   method: :put do |form| %>
 
   <%= form.simple_fields_for: :merged_motion do |merged_motion_fields| %>
@@ -17,9 +19,9 @@ Use this form to merge the motion to another motion proposed before the same com
   <% end %>
 
   <%= form.association :motion, as: :select,
-    collection: @motion_merger.merged_motion.mergeable_motions,
+    collection: motion_merger.merged_motion.mergeable_motions,
     hint: 'What motion should this motion be merged into?' %>
 
-  <%= form.button :wrapped, label: "Merge", cancel: motion_path(@motion_merger.motion) %>
+  <%= form.button :wrapped, label: "Merge", cancel: motion_path(motion_merger.motion) %>
 <% end %>
 
