--- a/app/views/motions/amend.html.erb
+++ b/app/views/motions/amend.html.erb
@@ -1,13 +1,15 @@
-<p>
+<%=content_tag :h1, "Amend #{motion.to_s :full}" %>
+
+<%= content_tag :p do %>
 Use this form to prepare an amended version of the motion.
 This will create an <em>amendment motion</em> in the committee.
 Once the amendment is adopted, it will be applied to the original motion.
 Specify attachments only if they are to be substituted for or added to the original attachments.
 An amendment must have sponsors.
-</p>
+<% end %>
 
-<%= simple_form_for @amendment, as: :amendment,
-  url: amend_motion_path( @motion ), method: :put do |form| %>
+<%= simple_form_for amendment, as: :amendment,
+  url: amend_motion_path( motion ), method: :put do |form| %>
   <%= render "shared/error_messages", target: form.object %>
   <%= render partial: 'motions/event_fields', object: form %>
   <%= form.input :name, label: 'Name',
@@ -16,6 +18,6 @@ An amendment must have sponsors.
   <%= form.input :content, hint: 'Provide the amended text of the motion' %>
   <%= form.input :sponsorships, as: :cocoon %>
   <%= form.input :attachments, as: :cocoon %>
-  <%= form.button :wrapped, label: 'Amend', cancel: motion_path( @motion ) %>
+  <%= form.button :wrapped, label: 'Amend', cancel: motion_path( motion ) %>
 <% end %>
 
