--- a/app/views/motions/divide.html.erb
+++ b/app/views/motions/divide.html.erb
@@ -1,12 +1,14 @@
+<%=content_tag :h1, "Divide #{motion.to_s :full}" %>
+
 <%= content_tag :p do %>
   Use this form to divide a motion into several <em>dividing motions</em>.
   These motions will be considered in the same committee in which this motion is proposed.
 <% end %>
 
-<%= render partial: 'motions/detail', locals: { motion: @motion } %>
+<%= render partial: 'motions/detail', locals: { motion: motion } %>
 
 <%= content_tag( :div, id: "referred_motions" ) do %>
-  <%= simple_form_for( @motion, url: divide_motion_path( @motion ),
+  <%= simple_form_for( motion, url: divide_motion_path( motion ),
     method: :put ) do |form| %>
     <%= render partial: 'motions/event_fields', object: form %>
     <%= form.input :referred_motions, as: :cocoon, label: "Dividing Motions" %>
