--- a/app/views/motions/implement.html.erb
+++ b/app/views/motions/implement.html.erb
@@ -1,10 +1,12 @@
+<%=content_tag :h1, "Implement #{motion.to_s :full}" %>
+
 <%= content_tag :p do %>
   Use this form to record the implementation of the motion.
   Implementation indicates no further followup is expected regarding the motion.
 <% end %>
 
-<%= simple_form_for @motion, as: :motion,
-  url: implement_motion_path( @motion ), method: :put do |form| %>
+<%= simple_form_for motion, as: :motion,
+  url: implement_motion_path( motion ), method: :put do |form| %>
   <%= render "shared/error_messages", target: form.object %>
   <%= render partial: 'motions/event_fields', object: form %>
   <%= form.button :wrapped, label: 'Implement', cancel: motion_path(form.object) %>
