--- a/app/views/motions/propose.html.erb
+++ b/app/views/motions/propose.html.erb
@@ -1,11 +1,13 @@
+<%=content_tag :h1, "Propose #{motion.to_s :full}" %>
+
 <%= content_tag :p do %>
   Use this form to propose the motion for action by the committee.
   Once proposed, no further changes may be made.
   The leadership of the committee will then be able to schedule it for meetings.
 <% end %>
 
-<%= simple_form_for @motion, as: :motion,
-  url: propose_motion_path( @motion ), method: :put do |form| %>
+<%= simple_form_for motion, as: :motion,
+  url: propose_motion_path( motion ), method: :put do |form| %>
   <%= render "shared/error_messages", target: form.object %>
   <%= render partial: 'motions/event_fields', object: form %>
 
