--- a/app/views/motions/refer.html.erb
+++ b/app/views/motions/refer.html.erb
@@ -1,11 +1,13 @@
+<%=content_tag :h1, "Refer #{motion.to_s :full} to another committee" %>
+
 <%= content_tag :p do %>
   Use this form to refer this motion to another committee.
   This will create a <em>referred motion</em> in the other committee that can
   then work through that committee's normal business process.
 <% end %>
 
-<%= simple_form_for @referred_motion, as: :referred_motion,
-  url: refer_motion_path( @motion ), method: :put do |form| %>
+<%= simple_form_for referred_motion, as: :referred_motion,
+  url: refer_motion_path( motion ), method: :put do |form| %>
   <%= render "shared/error_messages", target: form.object %>
 
   <%= render partial: 'motions/event_fields', object: form %>
@@ -15,6 +17,6 @@
   <%= form.input :name, label: 'Name',
     hint: 'What should be the new name of the motion?' %>
 
-  <%= form.button :wrapped, label: 'Refer', cancel: motion_path(@motion) %>
+  <%= form.button :wrapped, label: 'Refer', cancel: motion_path(motion) %>
 <% end %>
 
