--- a/app/views/motions/reject.html.erb
+++ b/app/views/motions/reject.html.erb
@@ -1,11 +1,13 @@
+<%=content_tag :h1, "Reject #{motion.to_s :full}" %>
+
 <%= content_tag :p do %>
   Use this form to record the rejection of the motion by the committee.
 <% end %>
 
-<%= simple_form_for @motion, as: :motion,
-  url: reject_motion_path( @motion ), method: :put do |form| %>
+<%= simple_form_for motion, as: :motion,
+  url: reject_motion_path( motion ), method: :put do |form| %>
   <%= render "shared/error_messages", target: form.object %>
   <%= render partial: 'motions/event_fields', object: form %>
-  <%= form.button :wrapped, label: 'Reject', cancel: motion_path(@motion) %>
+  <%= form.button :wrapped, label: 'Reject', cancel: motion_path(motion) %>
 <% end %>
 
