--- a/app/views/motions/withdraw.html.erb
+++ b/app/views/motions/withdraw.html.erb
@@ -1,10 +1,12 @@
+<%=content_tag :h1, "Withdraw #{motion.to_s :full}" %>
+
 <%= content_tag :p do %>
   Use this form to withdraw the motion from consideration by the committee.
   The motion will be yanked from any future meetings for which it is scheduled.
 <% end %>
 
-<%= simple_form_for @motion, as: :motion,
-  url: withdraw_motion_path( @motion ), method: :put do |form| %>
+<%= simple_form_for motion, as: :motion,
+  url: withdraw_motion_path( motion ), method: :put do |form| %>
   <%= render "shared/error_messages", target: form.object %>
   <%= render partial: 'motions/event_fields', object: form %>
 
