--- a/app/views/periods/_period.html.erb
+++ b/app/views/periods/_period.html.erb
@@ -1,8 +1,6 @@
-  <%= table_row_tag true, false, { id: "period-#{period.id}" } do %>
-    <% unless schedule %>
-    <td><%= period.schedule %></td>
-    <% end %>
-    <td><%=h period.starts_at.to_s :rfc822 %></td>
-    <td><%=h period.ends_at.to_s :rfc822 %></td>
-  <% end %>
+<%= table_row_tag true, false, { id: "period-#{period.id}" } do %>
+  <%=content_tag( :td, period.schedule ) unless schedule %>
+  <%=content_tag :td, period.starts_at.to_s :us_short %>
+  <%=content_tag :td, period.ends_at.to_s :us_short %>
+<% end %>
 
